# term-test

./: API_CHANGES.md  BENCHMARKING.md  CHANGELOG.md  CNAME  Cargo.toml  DELIVERABLES_INDEX.md  ENHANCEMENT_SUMMARY.md  GRAPHICS_PROTOCOL_SUPPORT.md  HARNESS_SUMMARY.md  IMPLEMENTATION_REPORT_ISSUE_19.md  IMPLEMENTATION_REPORT_WAVE1_REMAINING.md  INTEGRATION_NOTES.md  ISSUE_15_FIX_SUMMARY.md  ISSUE_16_REPORT.md  PHASE1_CHECKLIST.md  PTY_ENHANCEMENTS.md  README.md  RELEASE.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: BRANCH_PROTECTION.md  HEADLESS_RUNNER.md  IPC.md  RELEASE.md  ROADMAP.md  SHARED_STATE.md  STRUCTURE.md  TESTING.md  TIMING.md  TIMING_QUICKREF.md
docs/reports/: API_CHANGES.md  CI_ANALYSIS_SUMMARY.md  CI_IMPLEMENTATION_GUIDE.md  CI_QUICK_REFERENCE.md  CI_RECOMMENDED_CHANGES.diff  CI_VERIFICATION_COMPLETE.txt  CI_VERIFICATION_REPORT.md  DELIVERABLES_INDEX.md  ENHANCEMENT_SUMMARY.md  HARNESS_SUMMARY.md  INTEGRATION_NOTES.md  PHASE1_CHECKLIST.md  PHASE3_CHECKLIST.md  PHASE3_SUMMARY.md  PTY_ENHANCEMENTS.md  README_CI_VERIFICATION.md  SIXEL-SUPPORT-VALIDATION.md
examples/: README_TIMING.md  async_test.rs  async_wait_demo.rs  basic_test.rs  benchmark_test.rs  bevy_component_snapshot.rs  bevy_test.rs  graphics_detection.rs  grid_verification.rs  harness_demo.rs  headless_bevy.rs  headless_ci_example.rs  hybrid_bevy_client_daemon.rs  ipc_daemon_test.rs  keyboard_demo.rs  mouse_demo.rs  navigation_demo.rs  position_test.rs  pty_enhanced_demo.rs  scarab_alignment_demo.rs  shared_state_test.rs  sixel_test.rs  snapshot_test.rs  stream_parsing.rs  terminal_profiles_demo.rs  timing_demo.rs  wait_demo.rs
mimic/: all.html  enum.TermTestError.html  index.html  sidebar-items.js  struct.BevyTuiTestHarness.html  struct.Cell.html  struct.CommandBuilder.html  struct.ScreenState.html  struct.SixelCapture.html  struct.SixelRegion.html  struct.SixelSequence.html  struct.TestTerminal.html  struct.TuiTestHarness.html  type.Result.html
mimic/bevy/: struct.BevyTuiTestHarness.html
mimic/error/: enum.TermTestError.html  type.Result.html
mimic/events/: enum.KeyCode.html  fn.encode_key_event.html  index.html  struct.KeyEvent.html  struct.Modifiers.html
mimic/harness/: struct.TuiTestHarness.html
mimic/pty/: struct.TestTerminal.html
mimic/screen/: struct.Cell.html  struct.ScreenState.html  struct.SixelRegion.html
mimic/sixel/: struct.SixelCapture.html  struct.SixelSequence.html
ratatui_testlib/: all.html  enum.Axis.html  enum.RecordedEvent.html  enum.TermTestError.html  enum.WaitResult.html  index.html  sidebar-items.js  struct.AsyncTuiTestHarness.html  struct.Cell.html  struct.CommandBuilder.html  struct.GridSnapshot.html  struct.ITerm2Region.html  struct.KittyRegion.html  struct.MemoryResults.html  struct.Rect.html  struct.ScreenState.html  struct.SixelRegion.html  struct.TestTerminal.html  struct.TuiTestHarness.html  type.Parser.html  type.Result.html
ratatui_testlib/bevy/: index.html  sidebar-items.js  struct.BevyTuiTestHarness.html  struct.ComponentSnapshot.html
ratatui_testlib/error/: enum.TermTestError.html  type.Result.html
ratatui_testlib/events/: enum.KeyCode.html  enum.MouseButton.html  enum.ScrollDirection.html  fn.encode_key_event.html  fn.encode_mouse_event.html  index.html  sidebar-items.js  struct.KeyEvent.html  struct.Modifiers.html  struct.MouseEvent.html
ratatui_testlib/golden/: fn.assert_matches_golden.html  fn.generate_diff.html  fn.get_golden_dir.html  fn.save_golden.html  fn.should_update_goldens.html  fn.update_golden.html  index.html  struct.GoldenFile.html  struct.GoldenMetadata.html
ratatui_testlib/graphics/: enum.GraphicsProtocol.html  index.html  struct.GraphicsCapture.html  struct.GraphicsRegion.html
ratatui_testlib/harness/: struct.TuiTestHarness.html
ratatui_testlib/ipc/: enum.ControlMessage.html  enum.IpcError.html  index.html  struct.DaemonConfig.html  struct.DaemonConfigBuilder.html  struct.DaemonIpcClient.html  struct.DaemonSharedMemory.html  struct.DaemonTestHarness.html  struct.ShmHeader.html  struct.TerminalStateReader.html  trait.DaemonTestExt.html  type.IpcResult.html
ratatui_testlib/navigation/: enum.HintElementType.html  enum.NavMode.html  enum.PromptMarkerType.html  index.html  struct.FocusInfo.html  struct.HintLabel.html  struct.PromptMarker.html  trait.NavigationTestExt.html
ratatui_testlib/parallel/: index.html  struct.IsolatedTerminal.html  struct.PoolConfig.html  struct.PoolStats.html  struct.TerminalGuard.html  struct.TerminalId.html  struct.TerminalPool.html  struct.TestContext.html
ratatui_testlib/pty/: struct.TestTerminal.html
ratatui_testlib/scarab/: index.html  sidebar-items.js  struct.ScarabConfig.html  struct.ScarabConfigBuilder.html  struct.ScarabSharedMemory.html  struct.ScarabTestHarness.html  (+1 more)
scripts/: check-docs.sh
search.index/: 001e9d94ef75.js  00af76844f8e.js  015ee5e10ec0.js  0177f5a33ecd.js  01c849e98e66.js  01f942ead793.js  022592a58a49.js  022ff160cf7b.js  02352dcf7143.js  024552a6312c.js  02897d18bbed.js  02aa1b1d5b67.js  0332c178b839.js  035d0942994e.js  0376e18bb323.js  03f41969d796.js  043dc62051e1.js  06cdafebe830.js  06d0053825f8.js  073a8f77cb17.js  0869e2134863.js  091624abd7d8.js  091e412721de.js  09298f2925a0.js  0c935ff32fab.js  0d99c78ddcfd.js  0de2b6a5afe9.js  0eb28094c7c8.js  0f8b6bf619f2.js  0fbd7e3efd0a.js  112147b7de95.js  122b577a0dd2.js  128eb42baaef.js  128edfe41aa4.js  129a427b3376.js  12e1b922af0a.js  13322ba85873.js  14737dcc6c0c.js  163348fd0a26.js  1729b526b0b2.js  (+135 more)
src/: async_harness.rs  bevy.rs  error.rs  events.rs  golden.rs  graphics.rs  harness.rs  ipc.rs  lib.rs  navigation.rs  parallel.rs  pty.rs  screen.rs  shared_state.rs  sixel.rs  terminal_profiles.rs  timing.rs
tests/: benchmark_integration.rs  bevy_integration.rs  golden_files.rs  grid_verification.rs  ipc_test.rs  issue_8_acceptance.rs  mouse_integration.rs  parallel_execution.rs  recording.rs  shared_state_integration.rs  stream_parsing.rs  terminal_profiles_test.rs  timing_control.rs  timing_integration.rs
(+134 files in other folders)
