[package]
name = "term-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Raibid Labs"]
license = "MIT"
description = "Integration testing library for terminal user interface applications with Sixel and Bevy support"
repository = "https://github.com/raibid-labs/term-test"
keywords = ["tui", "testing", "ratatui", "sixel", "bevy"]
categories = ["development-tools::testing", "command-line-interface"]

[dependencies]
# Core dependencies (always enabled)
portable-pty = "0.8"
vt100 = "0.16"
thiserror = "2.0"
anyhow = "1.0"

# MVP dependencies (feature-gated)
tokio = { version = "1.35", optional = true, features = ["full"] }
bevy = { version = "0.14", optional = true, default-features = false }
bevy_ecs = { version = "0.14", optional = true }
bevy_ratatui = { version = "0.7", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
insta = { version = "1.34", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# Post-MVP dependencies (future)
async-std = { version = "1.12", optional = true }
expect-test = { version = "1.4", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []

# MVP features
async-tokio = ["tokio"]
bevy = ["dep:bevy", "bevy_ecs"]
bevy-ratatui = ["bevy", "dep:bevy_ratatui"]
ratatui-helpers = ["ratatui", "crossterm"]
sixel = []  # Core Sixel support with position tracking
snapshot-insta = ["insta", "serde", "serde_json"]

# MVP bundle (all MVP features)
mvp = [
    "async-tokio",
    "bevy",
    "bevy-ratatui",
    "ratatui-helpers",
    "sixel",
    "snapshot-insta",
]

# Post-MVP features
async-async-std = ["async-std"]
snapshot-expect = ["expect-test"]
sixel-image = ["image"]  # Advanced Sixel decoding

# Full bundle (all features)
full = [
    "mvp",
    "async-async-std",
    "snapshot-expect",
    "sixel-image",
]

[[example]]
name = "basic_test"
path = "examples/basic_test.rs"

[[example]]
name = "snapshot_test"
path = "examples/snapshot_test.rs"
required-features = ["snapshot-insta"]

[[example]]
name = "sixel_test"
path = "examples/sixel_test.rs"
required-features = ["sixel"]

[[example]]
name = "async_test"
path = "examples/async_test.rs"
required-features = ["async-tokio"]

[[example]]
name = "bevy_test"
path = "examples/bevy_test.rs"
required-features = ["bevy-ratatui"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
