[package]
name = "ratatui-testlib"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Raibid Labs"]
license = "MIT"
description = "Integration testing library for terminal user interface applications with Sixel and Bevy support"
repository = "https://github.com/raibid-labs/ratatui-testlib"
keywords = ["tui", "testing", "ratatui", "sixel", "bevy"]
categories = ["development-tools::testing", "command-line-interface"]

[dependencies]
# Core dependencies (always enabled)
portable-pty = "0.8"
termwiz = "0.22"
vtparse = "0.7"
thiserror = "2.0"
anyhow = "1.0"
bitflags = "2.4"
similar = "2.3"
chrono = "0.4"
regex = "1.10"

# MVP dependencies (feature-gated)
tokio = { version = "1.35", optional = true, features = ["full"] }
bevy = { version = "0.15", optional = true, default-features = false }
bevy_ecs = { version = "0.15", optional = true }
bevy_ratatui = { version = "0.7", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
insta = { version = "1.34", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# Post-MVP dependencies (future)
async-std = { version = "1.12", optional = true }
expect-test = { version = "1.4", optional = true }
image = { version = "0.25", optional = true }

# Shared state dependencies
memmap2 = { version = "0.9", optional = true }
bincode = { version = "1.3", optional = true }

# IPC dependencies
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []

# MVP features
async-tokio = ["tokio"]
bevy = ["dep:bevy", "bevy_ecs"]
bevy-ratatui = ["bevy", "dep:bevy_ratatui"]
ratatui-helpers = ["ratatui", "crossterm"]
sixel = []  # Core Sixel support with position tracking
snapshot-insta = ["insta", "serde", "serde_json"]
headless = []  # Headless mode for CI/CD (no display server required)

# MVP bundle (all MVP features)
mvp = [
    "async-tokio",
    "bevy",
    "bevy-ratatui",
    "ratatui-helpers",
    "sixel",
    "snapshot-insta",
]

# Post-MVP features
async-async-std = ["async-std"]
snapshot-expect = ["expect-test"]
sixel-image = ["image"]  # Advanced Sixel decoding
shared-state = ["memmap2", "bincode", "serde"]  # Shared memory state access
ipc = ["libc"]  # IPC + shared-memory helpers for split-process terminals

# Full bundle (all features)
full = [
    "mvp",
    "async-async-std",
    "snapshot-expect",
    "sixel-image",
    "shared-state",
    "ipc",
]

[[example]]
name = "basic_test"
path = "examples/basic_test.rs"

[[example]]
name = "snapshot_test"
path = "examples/snapshot_test.rs"
required-features = ["snapshot-insta"]

[[example]]
name = "sixel_test"
path = "examples/sixel_test.rs"
required-features = ["sixel"]

[[example]]
name = "async_test"
path = "examples/async_test.rs"
required-features = ["async-tokio"]

[[example]]
name = "bevy_test"
path = "examples/bevy_test.rs"
required-features = ["bevy-ratatui"]

[[example]]
name = "bevy_component_snapshot"
path = "examples/bevy_component_snapshot.rs"
required-features = ["bevy", "snapshot-insta"]

[[example]]
name = "headless_bevy"
path = "examples/headless_bevy.rs"
required-features = ["bevy"]

[[example]]
name = "benchmark_test"
path = "examples/benchmark_test.rs"
required-features = ["bevy"]

[[example]]
name = "terminal_profiles_demo"
path = "examples/terminal_profiles_demo.rs"
required-features = ["sixel"]

[[example]]
name = "shared_state_test"
path = "examples/shared_state_test.rs"
required-features = ["shared-state"]

[[example]]
name = "headless_ci_example"
path = "examples/headless_ci_example.rs"
required-features = ["bevy", "sixel"]

[[example]]
name = "hybrid_bevy_client_daemon"
path = "examples/hybrid_bevy_client_daemon.rs"
required-features = ["bevy"]

[[example]]
name = "graphics_detection"
path = "examples/graphics_detection.rs"
required-features = ["sixel"]

[[example]]
name = "timing_demo"
path = "examples/timing_demo.rs"

[[example]]
name = "ipc_daemon_test"
path = "examples/ipc_daemon_test.rs"
required-features = ["ipc"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
